generated/checker-for-evaluation/generated/test-Concurrency-7d42e097607c4d246d99225bf2b195b6167a210c/build_logs/0/build_error_log2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘bool {anonymous}::ExprHasName(const clang::Expr*, llvm::StringRef, clang::ento::CheckerContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:36:41: error: binding reference of type ‘clang::SourceManager&’ to ‘const clang::SourceManager’ discards qualifiers
   36 |   SourceManager &SM = C.getSourceManager();
      |                       ~~~~~~~~~~~~~~~~~~^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:97:43: error: taking address of rvalue [-fpermissive]
   97 |   const Expr *BoundExpr = &Val.getAs<Expr>();
      |                            ~~~~~~~~~~~~~~~^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:97:27: error: cannot convert ‘std::optional<clang::Expr>*’ to ‘const clang::Expr*’ in initialization
   97 |   const Expr *BoundExpr = &Val.getAs<Expr>();
      |                           ^~~~~~~~~~~~~~~~~~
      |                           |
      |                           std::optional<clang::Expr>*
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ConstraintManager.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:3:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h: In instantiation of ‘static std::optional<_Tp> llvm::CastInfo<To, From, typename std::enable_if<std::is_base_of<clang::ento::SVal, From>::value, void>::type>::doCastIfPossible(const From&) [with To = clang::Expr; From = const clang::ento::SVal]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:651:52:   required from ‘decltype(auto) llvm::dyn_cast(const From&) [with To = clang::Expr; From = clang::ento::SVal]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h:87:29:   required from ‘std::optional<_Tp> clang::ento::SVal::getAs() const [with T = clang::Expr]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:97:43:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h:503:20: error: could not convert ‘llvm::CastInfo<To, From, typename std::enable_if<std::is_base_of<clang::ento::SVal, From>::value, void>::type>::doCast(const From&) [with To = clang::Expr; From = const clang::ento::SVal]()’ from ‘clang::Expr’ to ‘std::optional<clang::Expr>’
  503 |     return doCast(f);
      |                    ^
      |                    |
      |                    clang::Expr
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h: In instantiation of ‘static bool llvm::CastInfo<To, From, typename std::enable_if<std::is_base_of<clang::ento::SVal, From>::value, void>::type>::isPossible(const From&) [with To = clang::Expr; From = const clang::ento::SVal]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h:501:26:   required from ‘static std::optional<_Tp> llvm::CastInfo<To, From, typename std::enable_if<std::is_base_of<clang::ento::SVal, From>::value, void>::type>::doCastIfPossible(const From&) [with To = clang::Expr; From = const clang::ento::SVal]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:651:52:   required from ‘decltype(auto) llvm::dyn_cast(const From&) [with To = clang::Expr; From = clang::ento::SVal]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h:87:29:   required from ‘std::optional<_Tp> clang::ento::SVal::getAs() const [with T = clang::Expr]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:97:43:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h:494:23: error: cannot convert ‘const clang::ento::SVal’ to ‘const clang::Stmt*’
  494 |     return To::classof(*static_cast<const ::clang::ento::SVal *>(&V));
      |            ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1009:35: note:   initializing argument 1 of ‘static bool clang::Expr::classof(const clang::Stmt*)’
 1009 |   static bool classof(const Stmt *T) {
      |                       ~~~~~~~~~~~~^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ConstraintManager.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:3:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h: In instantiation of ‘static To llvm::CastInfo<To, From, typename std::enable_if<std::is_base_of<clang::ento::SVal, From>::value, void>::type>::doCast(const From&) [with To = clang::Expr; From = const clang::ento::SVal]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h:503:18:   required from ‘static std::optional<_Tp> llvm::CastInfo<To, From, typename std::enable_if<std::is_base_of<clang::ento::SVal, From>::value, void>::type>::doCastIfPossible(const From&) [with To = clang::Expr; From = const clang::ento::SVal]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:651:52:   required from ‘decltype(auto) llvm::dyn_cast(const From&) [with To = clang::Expr; From = clang::ento::SVal]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h:87:29:   required from ‘std::optional<_Tp> clang::ento::SVal::getAs() const [with T = clang::Expr]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:97:43:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SVals.h:498:13: error: invalid ‘static_cast’ from type ‘const clang::ento::SVal*’ to type ‘const clang::Expr*’
  498 |     return *static_cast<const To *>(cast<::clang::ento::SVal>(&f));
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
